--- a/css/index.css
+++ b/css/index.css
@@ -18,11 +18,12 @@ body { height: 100vh; height: 100vh; }
 .wrapper1 .header div:nth-child(3) span { letter-spacing: -3px; }
 .wrapper1 .section { flex-grow: 1; display: flex; flex-direction: column; }
 .wrapper1 .section .section1 { height: 30%; font-family: AdobeHeitiStd-Regular; font-size: 110px; font-weight: normal; font-stretch: normal; letter-spacing: -1px; color: #fff; display: flex; align-items: center; justify-content: center; }
-.wrapper1 .section .section2 { height: 50%; position: relative; top: -5vh; padding: 60px 0; font-family: AdobeHeitiStd-Regular; font-size: 50px; letter-spacing: -1px; color: #fff; display: flex; flex-direction: column; align-items: center; justify-content: center; }
-.wrapper1 .section .section2 div { height: 20%; width: 100%; display: flex; align-items: center; justify-content: center; }
-.wrapper1 .section .section2 div span.lv1 { height: 65%; width: 80%; border-radius: 107px; background: rgba(0, 0, 0, 0.3); display: flex; align-items: center; justify-content: center; position: relative; }
-.wrapper1 .section .section2 div span.lv1 span.lv2 { position: absolute; top: 0; left: 0; height: 100%; width: 100%; display: flex; align-items: center; justify-content: flex-end; }
-.wrapper1 .section .section2 div span.lv1 span.lv2 img { height: 50px; margin-right: 50px; }
+.wrapper1 .section .section2 { height: 50%; position: relative; top: -5vh; padding: 60px 0; font-family: AdobeHeitiStd-Regular; font-size: 50px; letter-spacing: -1px; color: #fff; }
+.wrapper1 .section .section2 a { text-decoration: none; color: #fff; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 20%; width: 100%; }
+.wrapper1 .section .section2 a div { height: 100%; width: 100%; display: flex; align-items: center; justify-content: center; }
+.wrapper1 .section .section2 a div span.lv1 { height: 65%; width: 80%; border-radius: 107px; background: rgba(0, 0, 0, 0.3); display: flex; align-items: center; justify-content: center; position: relative; }
+.wrapper1 .section .section2 a div span.lv1 span.lv2 { position: absolute; top: 0; left: 0; height: 100%; width: 100%; display: flex; align-items: center; justify-content: flex-end; }
+.wrapper1 .section .section2 a div span.lv1 span.lv2 img { height: 50px; margin-right: 50px; }
 .wrapper1 .section .section3 { height: 20%; display: flex; align-items: center; justify-content: center; }
 .wrapper1 .section .section3 div:nth-child(1) img { height: 80px; margin-right: 20px; }
 .wrapper1 .section .section3 div:nth-child(2) { width: 12em; font-size: 42px; color: #fff; display: flex; flex-direction: column; }
