--- a/scss/index.scss
+++ b/scss/index.scss
@@ -83,37 +83,43 @@ body {
             font-size: 50px;
             letter-spacing: -1px;
             color: #fff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            div {
-                height: 20%;
-                width: 100%;
+            a {
+                text-decoration: none;
+                color: #fff;
                 display: flex;
+                flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                span.lv1 {
-                    height: 65%;
-                    width: 80%;
-                    border-radius: 107px;
-                    background: rgba(0, 0, 0, 0.3);
+                height: 20%;
+                width: 100%;
+                div {
+                    height: 100%;
+                    width: 100%;
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    position: relative;
-                    span.lv2 {
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        height: 100%;
-                        width: 100%;
+                    span.lv1 {
+                        height: 65%;
+                        width: 80%;
+                        border-radius: 107px;
+                        background: rgba(0, 0, 0, 0.3);
                         display: flex;
                         align-items: center;
-                        justify-content: flex-end;
-                        img {
-                            height: 50px;
-                            margin-right: 50px;
+                        justify-content: center;
+                        position: relative;
+                        span.lv2 {
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            height: 100%;
+                            width: 100%;
+                            display: flex;
+                            align-items: center;
+                            justify-content: flex-end;
+                            img {
+                                height: 50px;
+                                margin-right: 50px;
+                            }
                         }
                     }
                 }
