--- a/scss/carCharging.scss
+++ b/scss/carCharging.scss
@@ -999,13 +999,27 @@ body {
                                 align-items: center;
                                 justify-content: space-between;
                                 span:nth-of-type(1) {
+                                    width: 30%;
                                     font-size: 33px;
                                     letter-spacing: -1px;
+                                    text-align: end;
+                                    span.smallWord {
+                                        text-align: end;
+                                        font-size: 26px;
+                                    }
                                 }
+
                                 span:nth-of-type(2) {
+                                    width: 30%;
                                     font-size: 33px;
                                     letter-spacing: -1px;
+                                    text-align: start;
+                                    span.smallWord {
+                                        text-align: start;
+                                        font-size: 26px;
+                                    }
                                 }
+
                                 img:nth-of-type(1) {
                                     margin: 0 20px;
                                     z-index: 1;
@@ -1217,6 +1231,93 @@ body {
                     content: '';
                     display: inline-block;
                     width: 100%;
+                }
+            }
+        }
+    }
+}
+
+#electricBicycleChargingWrapper4 {
+    .section2 {
+        .s2part2 {
+            .content {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                .line1 {
+                    div {
+                        margin: 0 80px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+#electricBicycleChargingWrapper7 {
+    .section {
+        .section2 {
+            height: 70%;
+            margin: 0 20px 20px;
+
+            display: flex;
+            flex-direction: column;
+            color: #fff;
+            position: relative;
+            .section2Wrapper {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 106%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                ul {
+                    height: 100%;
+                    background-color: rgba($color: #0f1725, $alpha: 0.72);
+                    max-width: 1000px;
+                    display: flex;
+                    flex-wrap: wrap;
+                    li {
+                        width: 45.5%;
+                        height: 20%;
+                        margin-right: 3%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        div.liWrapper {
+                            position: relative;
+                            height: 90%;
+                            overflow: hidden;
+                            img {
+                                height: 100%;
+                            }
+                            span {
+                                font-size: 35px;
+                                position: absolute;
+
+                                top: calc(50% - 0.5em);
+                                left: calc(50% - 2.5em);
+                            }
+                            span.left2 {
+                                left: calc(50% - 1em);
+                            }
+                            span.left3 {
+                                left: calc(50% - 1.5em);
+                            }
+                            span.left6 {
+                                left: calc(50% - 3em);
+                            }
+                            span.extra {
+                                top: calc(50% - 1em);
+                                text-align: center;
+                            }
+                        }
+                    }
+                    li:nth-child(2n + 1) {
+                        margin-left: 3%;
+                    }
                 }
             }
         }
